# partshub

./: .bandit  .coveragerc  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  SESSION_NOTES.md  docker-compose.yml  docs.sh  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  startup.sh  versions.json
.claude/: settings.local.json
.codanna/: .project-id  settings.toml
.github/: pull_request_template.md
.taskmaster/: config.json  state.json
0.1.0/: 404.html  index.html  sitemap.xml
0.1.1/: 404.html  index.html  sitemap.xml
0.1.2/: 404.html  index.html  sitemap.xml
0.2.1/: 404.html  index.html  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  sitemap.xml
CHANGELOG/: index.html
api/: index.html
architecture/: index.html
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TESTING.md  add_multi_location_data.py  alembic.ini  demo_seed.py  index.html  partshub.db-shm  partshub.db-wal  pyproject.toml  quick_seed.py  reset_admin_password.py  reset_multi_location_data.py  run_tests.py  seed_simple.py  simple_sql_seed.py  test_auth_debug.py  test_bearer_debug.py  test_production_debug.py  test_stock_filtering.py  users_backup.sql  working_seed.py
dev/: 404.html  index.html  sitemap.xml
dev/api/: index.html
developer/: index.html
developer-notes/: index.html
docs/: CHANGELOG.md  README.md  SAVED_SEARCHES_IMPLEMENTATION_SUMMARY.md  api.md  index.md  kicad-field-mappings.md  kicad-integration.md  kicad-workflows.md  repository-setup.md
frontend/: .eslintrc.js  Dockerfile  SAVED_SEARCHES_INTEGRATION.md  SAVED_SEARCHES_QUICK_START.md  index.html  package-lock.json  package.json  quasar.config.js  tsconfig.json  tsconfig.node.json  vitest.config.ts
repository-setup/: index.html
scripts/: generate-release-notes.sh  sync-versions.sh  test-workflows.sh
search/: search_index.json
user/: index.html
(+791 files in other folders)
